[package]
name = "philiprehberger-csv-toolkit"
version = "0.1.2"
edition = "2021"
authors = ["Philip Rehberger"]
description = "High-level CSV reading, writing, and manipulation"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-csv-toolkit"
keywords = ["csv", "data", "parsing", "tabular", "reader"]
categories = ["parser-implementations", "encoding"]
